feat(directory): added directory to openapi
